# ComfyUI-CADS

./: DOCUMENTATION.md  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
workflows/: CADScompare.json
