[project]
name = "comfyui-cads"
description = "Attempts to implement [a/CADS](https://arxiv.org/abs/2310.17347) for ComfyUI. Credit also to the [a/A1111 implementation](https://github.com/v0xie/sd-webui-cads/tree/main) that I used as a reference."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/asagi4/ComfyUI-CADS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-CADS"
Icon = ""
