[project]
name = "comfyui-cads"
description = "Attempts to implement [a/CADS](https://arxiv.org/abs/2310.17347) for ComfyUI."
version = "1.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/asagi4/ComfyUI-CADS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "asagi4"
DisplayName = "ComfyUI-CADS"
Icon = ""
